--- a/views/pages/mail.ejs
+++ b/views/pages/mail.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test</title>
-    <link rel="stylesheet" href="../public/stylesheets/style.css">
+    <link rel="stylesheet" href="../../public/stylesheets/style.css">
 </head>
 <body>
     <form action="" id="form">
