--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,25 @@
 body {
-  padding: 50px;
+  margin: 5%;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+
+}
+
+#receipt {
+  border: 1px solid rgba(226, 207, 207, 0.5);
+  border-radius: 5px;
+  background-color: lightcyan;
+  padding: 10px;
+  text-align: center;
+  max-width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.2), 
+  0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+
+h2, h3 {
+  text-align: center;
 }
 
 a {
@@ -8,12 +27,39 @@ a {
 }
 
 #form {
-  background-color: blanchedalmond;
+  max-width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: lightcyan;
+  box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.2), 
+  0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-
 section {
   padding: 5px;
-  border: 1px solid;
+  border: 1px solid rgba(0, 0, 0, 0.1);
 margin-top: auto;
 margin-bottom: auto;
+}
+
+button {
+  padding: 5px;
+}
+
+#buttons {
+  text-align: center;
+}
+
+table, th, tr, td {
+  border: .5px solid rgba(0, 0, 0, .2);
+  background-color: seashell;
+  border-collapse: collapse;
+  padding: 10px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+footer {
+  text-align: center;
+  margin: 40px;
 }
