--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -1,17 +1,13 @@
 #frontImage {
-
     width: 300px;
-
     margin-left: auto;
     margin-right: auto;
-    background-color: rgb(63, 63, 63);
 }
 header {
     text-align: center;
 }
 #content {
-    
-    background-color: rgb(63, 63, 63);
+    background-color: rgb(53, 53, 53);
     width: 100%;
 }
 body {
@@ -52,11 +48,12 @@ align-items: center;
     border-bottom: .5px solid rgba(255, 255, 255, 0.445);
     display: flex;
     width: 100%;
-    
+    align-items: center;
 }
 
 .imageIcon {
     height: 60px;
+    width: 120px;
     margin-right: 30px;
 }
 .input {
